# Masterarbeit

./: CMakeLists.txt  Material.cpp  Material.h  Matrix2D.cpp  Matrix2D.h  Matrix3D.cpp  Matrix3D.h  Particle.cpp  Particle.h  PointStruct.cpp  PointStruct.h  main.cpp
include/opencv-mingw-build/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  opencv_data_config.hpp  opencv_python_config.cmake  opencv_python_tests.cfg  opencv_tests_config.hpp
include/opencv-mingw-build/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/apps/annotation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/apps/interactive-calibration/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/apps/model-diagnostics/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/apps/version/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/apps/visualisation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/opencv-mingw-build/modules/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  undistort.avx2.cpp  (+1 more)
(+209 files in other folders)
